vlib/v/parser/tests/expecting_type_declaration_for_new_attribute_field_followed_by_enum_default_value.vv
enum MyEnum {
	a
	b
}

struct MyStruct {
	s string
	i int
	e MyEnum @[required] = .a
}
